--- a/index.html
+++ b/index.html
@@ -22,21 +22,22 @@
         .splash-screen .content {
             background: white;
             padding: 40px;
+            width: 80%;
             border-radius: 10px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
             text-align: center;
         }
 
         .splash-screen h1 {
-            font-size: 3rem;
-            color: #ffc0cb;
+            font-size: 2rem;
+            color: #ff5874;
             margin-bottom: 20px;
         }
 
         .splash-screen button {
             padding: 10px 20px;
             font-size: 1.2rem;
-            color: #ffc0cb;
+            color: #ff5874;
             background-color: white;
             border: none;
             border-radius: 5px;
@@ -45,7 +46,8 @@
         }
 
         .splash-screen button:hover {
-            background-color: #fb8296;
+            color : whitesmoke;
+            background-color: #ff5874;
         }
 
         #main-content {
@@ -93,6 +95,7 @@
 
         .profiles {
             display: flex;
+            gap: 30px;
             justify-content:center;
             margin-bottom: 40px;
         }
@@ -110,7 +113,7 @@
 
         .profile h3 {
             font-size: 1.5rem;
-            color: #d36775;
+            color: #ff5874;
         }
 
         .profile p {
@@ -125,7 +128,7 @@
 
         .message h2 {
             font-size: 2rem;
-            color: #d2698b;
+            color: #ff5874;
             margin-bottom: 15px;
         }
 
@@ -143,6 +146,11 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 20px;
+        }
+
+        .gallery h2{
+            text-align: center;
+            margin-top: 100px;
         }
 
         .polaroid {
@@ -188,7 +196,7 @@
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background-color: #ffc0cb;
+            background-color: #ff5874;
             color: white;
             border: none;
             border-radius: 50%;
@@ -249,7 +257,7 @@
             </section>
 
             <section class="gallery">
-                <h2 class="section-title">Our Journey</h2>
+                <h2 class="section-title">Our Journeyજ⁀➴</h2>
                 <div class="polaroid">
                     <img src="IMG_4947.jpg" alt="Photo 1">
                     <p>Concert Date🎤🎸🎶</p>
