--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
         .gallery {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            grid-template-columns: repeat(2, 1fr); /* Two equal columns */
             gap: 20px;
         }
 
