--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 </div>
                 <div class="polaroid">
                     <img src="IMG_4696.jpg" alt="Photo 2">
-                    <p>Topokki is a must⛩️</p>
+                    <p>Topokki is a must🍲</p>
                 </div>
                 <div class="polaroid">
                     <img src="IMG_5509.jpg" alt="Photo 3">
@@ -279,11 +279,11 @@
                     <p>Movie Date˙✧˖°🍿 ༘ ⋆｡˚</p>
                 </div>
                 <div class="polaroid">
-                    <img src="IMG_8783.jpg" alt="Photo 6">
+                    <img src="IMG_8783.JPG" alt="Photo 6">
                     <p>Her POV˚☽˚｡⋆</p>
                 </div>
                 <div class="polaroid">
-                    <img src="IMG_8637.jpg" alt="Photo 7">
+                    <img src="IMG_8637.JPG" alt="Photo 7">
                     <p>His POV˙✧˖°📷 ༘ ⋆｡˚</p>
                 </div>
                 <div class="polaroid">
@@ -295,7 +295,7 @@
                     <p>Our Birthday🎉🎂✨🍰🥳</p>
                 </div>
                 <div class="polaroid">
-                    <img src="IMG_8770.jpg" alt="Photo 10">
+                    <img src="IMG_8770.JPG" alt="Photo 10">
                     <p>Sushi Date🍙🍣🍱🥢</p>
                 </div>
                 <div class="polaroid">
