--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         }
 
         header {
-            background: linear-gradient(135deg, #ffdde1, #ee9ca7);
+            background: linear-gradient(135deg, #ffdde1, #ff5874);
             text-align: center;
             padding: 30px;
             color: white;
@@ -210,7 +210,7 @@
         }
 
         .music-control:hover {
-            background-color: #f8d7da;
+            background-color: #ff5874;
         }
     </style>
 </head>
